# vexel

./: .gitignore  README.md  pyproject.toml
calendar_agent/: agent.py
charts_agent/: agent.py
concord_agent/: agent.py
concord_sql_agent/: agent.py  executor_agent.py  query_builder_agent.py  query_crud_agent.py
concord_sql_agent/state/: __init__.py  schema_loader.py
concord_sql_agent/tools/: __init__.py  named_queries.py  named_query_tool.py  query_crud_tool.py  query_execution_tool.py
concord_sql_agent/utils/: client.py
google_sales_agent/: agent.py
logging/: README.md  logging.py  test_logging.py
tools/: types.py
tools/charts/: __init__.py  charts.py
tools/user/: __init__.py  user_info.py
tracer/: README.md  __init__.py  test_trace.py  trace.py
vexel-app/: middleware.ts  package.json  pnpm-lock.yaml
vexel-app/app/: layout.tsx  page.tsx
vexel-app/app/adk/[appName]/: page.tsx
vexel-app/app/api/adk/[appName]/: route.ts
vexel-app/app/api/adk/[appName]/session/: route.ts
vexel-app/app/api/auth/callback/: route.ts
vexel-app/app/api/auth/login/: route.ts
vexel-app/app/api/auth/logout/: route.ts
vexel-app/app/api/auth/session/: route.ts
vexel-app/app/login/: page.tsx
vexel-app/components/Chat/: ChatBubble.tsx  ChatInterface.tsx
vexel-app/components/Layout/: AppDrawer.tsx  AppHeader.tsx  AppLayout.tsx
vexel-app/components/ThemeRegistry/: EmotionCache.tsx  ThemeContext.tsx  ThemeRegistry.tsx  themes.ts
vexel-app/context/: AuthContext.tsx
